fix(scoreboard) scoreboard value uses ellipses overflow now

--- a/src/client/app/live-game/scoreboard/scoreboard.component.scss
+++ b/src/client/app/live-game/scoreboard/scoreboard.component.scss
@@ -121,6 +121,8 @@ img {
   padding-right: 10px;
   text-overflow: ellipsis;
   white-space: nowrap;
+  text-align: right;
+  width: 100px;
 }
 
 .drop-down-menu {
